--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 .right_container{
-    border: 10px solid purple;
+    border: 10px solid blue;
     position: relative;
     width: 40vw;
     height: 70vh;
@@ -26,7 +26,7 @@
 }
 
 .right_container_header{
-        border: 5px solid black;
+        border: 5px solid purple;
 }
 
 .right_container_below_header{
