--- a/style.css
+++ b/style.css
@@ -36,6 +36,12 @@
         padding-left: 10px;
 }
 
+#form{
+    width: 80%;
+    margin: 20px;
+    
+}
+
 
 
 /* Responsive layout - makes a one column layout instead of a two-column layout */
